--- a/sample/EmbeddedAssets.Sample/EmbeddedAssets.Sample/MainPage.xaml
+++ b/sample/EmbeddedAssets.Sample/EmbeddedAssets.Sample/MainPage.xaml
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:embedded="clr-namespace:Xamarin.Forms.EmbeddedAssets;assembly=Xamarin.Forms.EmbeddedAssets"
              x:Class="EmbeddedAssets.Sample.MainPage">
 
     <StackLayout>
@@ -9,7 +8,7 @@
             <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
         </Frame>
         
-        <WebView Source="{embedded:EmbeddedAsset MyPage.html}"
+        <WebView Source="{EmbeddedAsset MyPage.html}"
                  VerticalOptions="FillAndExpand"
                  HorizontalOptions="FillAndExpand"/>
     </StackLayout>
